Fixed CSS so there's no footer overlapping the main

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,7 +4,7 @@
 }
 
 .main {
-	height: 700px;
+	min-height: 710px;
 }
 
 body {
